--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Run Pact tests
       run: |
-        cd ${{ matrix.service }}
+        cd ${{ matrix.service }}/tests
         pip install -r requirements.txt
         pip install pytest pact-python
         pytest pact_tests.py
