Update to trigger deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Run Pact tests
       run: |
         cd ${{ matrix.service }}/tests
+        pip install pytest pact-python
         pytest pact_tests.py
 
     - name: Deploy to AWS Lambda
