--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
         aws lambda update-function-code --function-name smart-home-energy-${{ matrix.service }} --zip-file fileb://deployment-package.zip
 
     - name: Upload Pact files
+      uses: aws-actions/configure-aws-credentials@v1
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
