--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,12 @@ jobs:
         zip -r deployment-package.zip .
         aws lambda update-function-code --function-name smart-home-energy-${{ matrix.service }} --zip-file fileb://deployment-package.zip
 
-    - name: Upload Pact files
-      uses: aws-actions/configure-aws-credentials@v1
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-west-2'  # Change this to your AWS region
-      run: |
-        cd ${{ matrix.service }}
-        aws s3 cp pacts/ s3://smart-home-energy-pact-files/${{ matrix.service }}/ --recursive
+    # - name: Upload Pact files
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     AWS_DEFAULT_REGION: 'us-west-2'  # Change this to your AWS region
+    #   run: |
+    #     cd ${{ matrix.service }}
+    #     aws s3 cp pacts/ s3://smart-home-energy-pact-files/${{ matrix.service }}/ --recursive
