--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,14 @@ jobs:
         pip install pytest pact-python
         pytest pact_tests.py
 
+        
     - name: Deploy to AWS Lambda
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'us-west-2'  # Change this to your AWS region
       run: |
+        aws lambda list-functions --region ${{ secrets.AWS_REGION }}
         cd ${{ matrix.service }}
         pip install awscli
         zip -r deployment-package.zip .
